--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,3 +4,18 @@ body {
     padding: 0;
     overflow-x: hidden;
 }
+
+.nav {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    z-index: 999;
+}
+
+.nav li {
+    padding: .3rem;
+    color: #000;
+    list-style-type: none;
+    text-decoration: none;
+}
