--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    background: linear-gradient(#FBBAA6 10%, #f30000a4);
+    min-height: 100vh;
+    width: 100%;
+
 }
 
 .nav {
@@ -11,11 +15,22 @@ body {
     align-items: center;
     position: relative;
     z-index: 999;
+    overflow-y: auto;
+    height: 50px;
 }
 
 .nav li {
-    padding: .3rem;
+    padding: .7rem;
     color: #000;
     list-style-type: none;
+
+}
+
+.nav li a {
     text-decoration: none;
+    color: black;
+}
+
+ul {
+    padding: 0px 0px 0px 20px  ;
 }
