--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,3 +42,12 @@ body {
 ul {
     padding: 0px 0px 0px 20px  ;
 }
+
+button {
+    color: #000;
+    background-color: transparent;
+    border: none;
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    cursor: pointer;
+}
